Add styles to contact block and footer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <img src="assets/images/illustration.svg" alt="illustration">
                 </div>
             </div>
-            <div class="social__wrap">
+            <div class="social__wrap flex">
                 <a href="#" class="social__link" target="_blank">
                     <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -403,20 +403,20 @@
         </div>
     </section>
 </main>
-<div class="contacts__wrap">
-    <section class="">
-        <div class="wrapper">
+<div class="contacts__block">
+    <section class="contacts__wrap">
+        <div class="wrapper contacts__content">
             <h2>Contact Us</h2>
-            <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas.</p>
-            <form action="" class="contact__form">
+            <p class="strong">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil <br> molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas.</p>
+            <form action="" class="contact__form flex flex-justify_sb">
                 <input id="mail-input" type="text" class="form__input" placeholder="Your email" required>
-                <input type="submit" class="form__btn btn" value="Send">
+                <input type="submit" class="form__btn btn bg_fuchsia" value="Send">
             </form>
         </div>
     </section>
     <footer class="footer">
-        <div class="wrapper">
-            <div class="footer-nav__wrap">
+        <div class="wrapper flex flex-justify_sb flex-align_end">
+            <div class="footer-nav__wrap flex flex-justify_sb">
                 <ul class="footer-nav__list">
                     <li class="footer-nav__item">
                         <a href="#">Consectetur</a>
@@ -461,7 +461,7 @@
                 </ul>
             </div>
             <div class="footer-contacts__wrap">
-                <div class="social__wrap">
+                <div class="social__wrap flex">
                     <a href="#" class="social__link" target="_blank">
                         <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
