Add styles to blog section

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 <!-- макет https://www.figma.com/community/file/875377725857222897 -->
 <header class="header">
     <div class="wrapper flex flex-justify_sb flex-align_center">
-        <div class="logo__wrap">
-            RELAP
-        </div>
+        <div class="logo__wrap">RELAP</div>
         <nav class="header-nav__wrap">
             <a href='#' class="header-nav__item">Home</a>
             <a href='#' class="header-nav__item">Features</a>
@@ -379,13 +377,13 @@
             </div>
         </div>
     </section>
-    <section class="bg_pink">
-        <div class="wrapper flex">
-            <div class="">
+    <section class="blog__section bg_pink">
+        <div class="wrapper flex flex-align_center">
+            <div class="blog__preview">
                 <span class="subtitle">Nisi ut aliquid</span>
                 <h2>Omnis voluptas assumenda</h2>
                 <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est.</p>
-                <a href="#" class="btn">Our blog</a>
+                <a href="#" class="btn bg_fuchsia">Our blog</a>
             </div>
             <div class="blog__item">
                 <div class="blog__img image__wrap image__wrap_rect">
@@ -393,8 +391,8 @@
                 </div>
                 <div class="blog__content">
                     <div class="blog__title">Itaque earum rerum</div>
-                    <div class="blog__desc">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates</div>
-                    <div class="blog__author flex">
+                    <p class="blog__desc">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates</p>
+                    <div class="blog__author flex flex-align_center">
                         <img src="assets/images/man.jpg" alt="man">
                         <span>Adaora Azubuike</span>
                     </div>
