Add styles to review section

--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@
             </div>
         </div>
     </section>
-    <section class="wrapper">
+    <section class="review__section wrapper">
         <h2>Officis debitis</h2>
-        <p class="">
+        <p class="preview">
             Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur
             aut perferendis doloribus asperiores repella.
         </p>
@@ -355,7 +355,7 @@
             </div>
         </div>
         <div class="slider partners__slider">
-            <div class="slider__wrap partners__wrap flex flex-align_center">
+            <div class="slider__wrap partners__wrap flex flex-align_center flex-justify_sb">
                 <div class="slider__item partners__item">
                     <img src="assets/images/partner1.svg" alt="partner1">
                 </div>
@@ -382,7 +382,7 @@
             <div class="blog__preview">
                 <span class="subtitle">Nisi ut aliquid</span>
                 <h2>Omnis voluptas assumenda</h2>
-                <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est.</p>
+                <p class="preview">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est.</p>
                 <a href="#" class="btn bg_fuchsia">Our blog</a>
             </div>
             <div class="blog__item">
@@ -405,7 +405,7 @@
     <section class="contacts__wrap">
         <div class="wrapper contacts__content">
             <h2>Contact Us</h2>
-            <p class="strong">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil <br> molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas.</p>
+            <p class="preview">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil <br> molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas.</p>
             <form action="" class="contact__form flex flex-justify_sb">
                 <input id="mail-input" type="text" class="form__input" placeholder="Your email" required>
                 <input type="submit" class="form__btn btn bg_fuchsia" value="Send">
