Add styles to advantages section

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
             </div>
         </div>
     </section>
-    <section class="wrapper">
-        <h2>Fugiat quo</h2>
-        <p class="">
+    <section class="advantages__section wrapper">
+        <h2 class="center">Fugiat quo</h2>
+        <p class="preview preview_center">
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
             aperiam.
         </p>
@@ -315,8 +315,8 @@
         </div>
     </section>
     <section class="review__section wrapper">
-        <h2>Officis debitis</h2>
-        <p class="preview">
+        <h2 class="center">Officis debitis</h2>
+        <p class="preview preview_center">
             Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur
             aut perferendis doloribus asperiores repella.
         </p>
