Add styles to team section

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <section class="advantages__section wrapper">
         <h2 class="center">Fugiat quo</h2>
         <p class="preview preview_center">
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium<br> doloremque laudantium, totam rem
             aperiam.
         </p>
         <div class="advantages__wrap flex flex_wrap">
@@ -300,17 +300,17 @@
             </div>
         </div>
     </section>
-    <section class="bg_blue">
-        <div class="wrapper flex">
-            <div class="">
+    <section class="team__section bg_blue">
+        <div class="wrapper flex flex-align_center flex-justify_sb">
+            <div class="team__img">
                 <img src="assets/images/team.png" alt="team">
             </div>
-            <div class="">
+            <div class="team__desc">
                 <span class="subtitle">Repellendus</span>
                 <h2>Temporibus quibusdam</h2>
-                <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
+                <p class="preview">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
                     placeat facere possimus, omnis voluptas assumenda est.</p>
-                <a href="#" class="btn">Our team</a>
+                <a href="#" class="btn bg_yellow">Our team</a>
             </div>
         </div>
     </section>
