--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href='#' class="header-nav__item">People</a>
             <a href='#' class="header-nav__item">News</a>
         </nav>
-        <a href="#" class="header__link btn">
+        <a href="#" class="header__link btn btn_border">
             Contact Us
         </a>
     </div>
@@ -33,18 +33,18 @@
 <main class="main__wrap">
     <section class="main-screen__wrap">
         <div class="wrapper">
-            <div class="">
+            <div class="flex flex-align_center">
                 <div class="">
                     <h1>Omnis Voluptas</h1>
-                    <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et
+                    <p class="preview">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et
                         voluptates repudiandae sint et molestiae non recusandae.</p>
-                    <a href="#" class="btn">Explore</a>
+                    <a href="#" class="btn bg_yellow">Explore</a>
                 </div>
                 <div class="main-screen__img">
                     <img src="assets/images/illustration.svg" alt="illustration">
                 </div>
             </div>
-            <div class="social__wrap flex">
+            <div class="social__wrap flex flex-justify_end">
                 <a href="#" class="social__link" target="_blank">
                     <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -113,7 +113,7 @@
                 </div>
             </div>
         </div>
-        <div class="">
+        <div class="image__wrap image__wrap_rect">
             <img src="assets/images/watercolor.jpg" alt="watercolor">
         </div>
     </section>
@@ -176,7 +176,7 @@
                             </span>
                             </a>
                         </div>
-                        <a href="#" class="btn">All works</a>
+                        <a href="#" class="btn bg_fuchsia">All works</a>
                     </div>
                     <div class="tab__pane">2222</div>
                     <div class="tab__pane">3333</div>
