Add styles to video and works sections

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header class="header">
     <div class="wrapper flex flex-justify_sb flex-align_center">
         <div class="logo__wrap">RELAP</div>
-        <nav class="header-nav__wrap">
+        <nav class="header-nav__wrap flex">
             <a href='#' class="header-nav__item">Home</a>
             <a href='#' class="header-nav__item">Features</a>
             <a href='#' class="header-nav__item">Works</a>
@@ -69,8 +69,8 @@
             </div>
         </div>
     </section>
-    <section class="wrapper flex">
-        <div class="">
+    <section class="video__section wrapper flex flex-align_center">
+        <div class="video__desc">
             <span class="subtitle">Quis autem</span>
             <h2>Corporis suscipit laboriosam</h2>
             <div class="accordion">
@@ -113,11 +113,11 @@
                 </div>
             </div>
         </div>
-        <div class="image__wrap image__wrap_rect">
+        <div class="video__wrap image__wrap image__wrap_rect">
             <img src="assets/images/watercolor.jpg" alt="watercolor">
         </div>
     </section>
-    <section class="bg_pink">
+    <section class="works__section bg_pink">
         <div class="wrapper">
             <span class="subtitle">Nisi ut aliquid</span>
             <div class="flex">
@@ -128,7 +128,7 @@
                     labore et dolore magnam aliquam quaerat voluptatem.</p>
             </div>
             <div class="tab__wrap">
-                <ul class="tab__nav">
+                <ul class="tab__nav flex">
                     <li class="tab__nav-item">
                         <a href="#" class="">Quis Autem</a>
                     </li>
@@ -176,7 +176,7 @@
                             </span>
                             </a>
                         </div>
-                        <a href="#" class="btn bg_fuchsia">All works</a>
+                        <a href="#" class="btn bg_fuchsia m_auto">All works</a>
                     </div>
                     <div class="tab__pane">2222</div>
                     <div class="tab__pane">3333</div>
