Add styles for decoration (ovals)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="main-screen__wrap">
         <div class="wrapper">
             <div class="flex flex-align_center">
-                <div class="">
+                <div class="main-screen__desc">
                     <h1>Omnis Voluptas</h1>
                     <p class="preview">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et
                         voluptates repudiandae sint et molestiae non recusandae.</p>
