fixed validator errors

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Source+Sans+Pro:wght@400;600;700&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="assets/styles/styles.css">
     <title>Неделя 5 - Свой макет</title>
 </head>
@@ -406,7 +406,7 @@
         <div class="wrapper contacts__content">
             <h2>Contact Us</h2>
             <p class="preview">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil <br> molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas.</p>
-            <form action="" class="contact__form flex flex-justify_sb">
+            <form class="contact__form flex flex-justify_sb">
                 <input id="mail-input" type="text" class="form__input" placeholder="Your email" required>
                 <input type="submit" class="form__btn btn bg_fuchsia" value="Send">
             </form>
